# tianchi-nlp-news-classification

./: .gitignore  HIGH_ACCURACY_CONFIG.md  README.md  UPGRADE_TO_97.md  data_utils.py  infer.py  infer_bert_ensemble.py  main.py  pyproject.toml  report.md  train.py  train_bert.sh  train_high_accuracy.sh
models/: __init__.py  base.py  bert_ensemble.py  bert_finetune.py  bert_model.py  registry.py  sklearn_model.py  template_custom_model.py  textcnn_model.py  transformer_model.py
report/: report.md
