[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true

[project]
name = "tianchi-nlp-news-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.0",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]
